--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ boto3==1.5.7
 botocore==1.8.21
 celery==4.1.0
 Django==1.10
+configparser==3.5.0
 django-cors-headers==2.1.0
 django-cors-middleware==1.3.1
 djangorestframework==3.7.7
