--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ celery==4.1.0
 Django==1.10
 configparser==3.5.0
 django-cors-headers==2.1.0
+whitenoise==3.3.1
 django-cors-middleware==1.3.1
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
